RESOLVED FIXED115065
Assertion failure (crash in release) attempting to delete database storage in WK1 without creating a WebView first
https://bugs.webkit.org/show_bug.cgi?id=115065
Summary Assertion failure (crash in release) attempting to delete database storage in...
Jessie Berlin
Reported 2013-04-23 16:55:14 PDT
1 com.apple.WebCore 0x10de663d8 WebCore::platformStrategies() + 0x48 (PlatformStrategies.cpp:38) 2 com.apple.WebCore 0x10cf070f6 WebCore::DatabaseManager::DatabaseManager() + 0x56 (DatabaseManager.cpp:77) 3 com.apple.WebCore 0x10cf07095 WebCore::DatabaseManager::DatabaseManager() + 0x15 (DatabaseManager.cpp:82) 4 com.apple.WebCore 0x10cf07064 WebCore::DatabaseManager::manager() + 0x34 (DatabaseManager.cpp:63) 5 com.apple.WebKit 0x10ae1a609 -[WebDatabaseManager deleteOrigin:] + 0x19 (WebDatabaseManager.mm:114) <rdar://problem/13721655>
Attachments
Patch (14.74 KB, patch)
2013-04-23 17:08 PDT, Jessie Berlin
no flags
Jessie Berlin
Comment 1 2013-04-23 17:08:59 PDT
Jessie Berlin
Comment 2 2013-04-24 08:16:27 PDT
Note You need to log in before you can comment on or make changes to this bug.