Source/WebKit/mac/WebCoreSupport/WebPlatformStrategies.h
@@ -38,7 +38,7 @@
 
 class WebPlatformStrategies : public WebCore::PlatformStrategies, private WebCore::CookiesStrategy, private WebCore::DatabaseStrategy, private WebCore::LoaderStrategy, private WebCore::PasteboardStrategy, private WebCore::PluginStrategy, private WebCore::SharedWorkerStrategy, private WebCore::StorageStrategy, private WebCore::VisitedLinkStrategy {
 public:
-    static void initialize();
+    static void initializeIfNecessary();
     
 private:
     WebPlatformStrategies();
